Revision history for Data-iRealPro

1.10	2018-10-30

	More user friendly error messages when required modules
	PDF::API and Imager are missing.

1.09	2017-07-22

	Remove App::Packager. It is now on CPAN.

1.08	2017-05-22

	Fix problem with text input where space separated chords did
	not get a comma.
	Also fixed some other comma problems with text in/output.

1.07	2017-03-07

	Improvements to MusicXML import.
	Implement --musescore (auto-detected) to deal with a number
	of anomalities in the XML generated by MuseScore.
	Fixed key detection.

1.06	2017-03-06

	Improvements to MusicXML import.
	Implement --suppress-text for MusicXML input.
	Fix wildcard expansion on Windows.

1.05	2017-03-01

	Improvements to MusicXML import.
	Implement --condense, --override-alt and --suppress-upbeat for
	MusicXML input.

1.04	2017-02-28

	Improvements to MusicXML import.
	Small fixes in URI encoding.

1.03	2016-12-23

	Add argument globbing for MS-Windows.
	Strip trailing whitespace in texts.
	Make <?xml ...> optional in MusicXML detection.
	Fix inferring playlist name for multi-file input.
	(Imager) Fix mediabox. Fix one-off error in last cell.
	(MusicXML) Add --neatify.

1.02	2016-12-07

	Remove DDumper from MusicXML.

1.01	2016-12-06

	(JSON) Fix problem with generic TO_JSON method.
	(MusicXML) Add MusicXML import (experimental!).
	
1.00	2016-11-26

	Release 1.00.
	(Imager) Discard final (trailing?) empty cells for low water
	mark.

0.24	2016-11-17

	(Imager) Fix placement of single and double bar repeats.
	In npp strict mode matches iRealPro.
	Add chord tests to MANIFEST and git.

0.23	2016-11-16

	(Song a.o.) Fix problem where a vertical shift halfway the
        line could result in a not yet shifted right barline
        overprinting a shifted left bar line, making a barline that is
        too long.
	(Input/Text) Fix composer detection in text input.
	(Song) Modify the chords parser to use a regex built from
	the official list of chord qualities.