@@ -4,7 +4,6 @@ Makefile.PL
 README
 script/irealcvt.pl
 script/pp.PL
-lib/App/Packager.pm
 lib/Data/iRealPro.pm
 lib/Data/iRealPro/Bundle.pm
 lib/Data/iRealPro/Input.pm
@@ -48,8 +47,8 @@ t/24-text.t
 t/30-chords.t
 t/31-chords.t
 t/32-chords.t
+t/40-transpose.t
+t/41-transpose.t
 pp/Makefile.lnx
 pp/Makefile.msw
 pp/irealcvt.pp
-META.yml                                 Module YAML meta-data (added by MakeMaker)
-META.json                                Module JSON meta-data (added by MakeMaker)
