@@ -157,10 +157,13 @@ my $exp = <<EOD;
                "advance 1",
                "end",
                "advance 1"
-            ]
+            ],
+            "transpose" : 0
          }
-      ]
-   }
+      ],
+      "transpose" : 0
+   },
+   "transpose" : 0
 }
 EOD
 
